--- a/gfx/images.qrc
+++ b/gfx/images.qrc
@@ -3,5 +3,8 @@
         <file>Logo_FALCON_button.png</file>
         <file>Logo_FALCON_full_button.png</file>
         <file>FALCON_banner.png</file>
+        <file>SFB876_full.png</file>
+        <file>tu-dortmund_full+margin.png</file>
+        <file>CNI_full+margin.png</file>
     </qresource>
 </RCC>
